--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,7 +33,7 @@
     },
   
     // Add the IDs of extensions you want installed when the container is created.
-    "extensions": ["ms-python.python", "ms-python.vscode-pylance"],
+    "extensions": ["ms-python.python", "ms-python.vscode-pylance", "juanblanco.solidity"],
   
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [9000],
